kubernetes/monitor/splunk/splunk-deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splunk
  namespace: monitor
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx-internal
  rules:
  - host: splunk.${DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: splunk-s1-standalone-service
            port: 
              number: 8000
      - path: /services/collector
        pathType: Prefix
        backend:
          service:
            name: splunk-s1-standalone-headless
            port: 
              number: 8088
